--- a/ueditor.conf
+++ b/ueditor.conf
@@ -5,7 +5,20 @@ server {
 
     server_name 127.0.0.1;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+    add_header 'Access-Control-Allow-Origin' "$http_origin";
+    add_header 'Access-Control-Allow-Credentials' 'true';
+    add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Token';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST,DELETE, OPTIONS';
+
+    location / { 
+	if ($request_method = 'OPTIONS') {
+	        add_header Access-Control-Allow-Origin $http_origin;
+	        add_header Access-Control-Allow-Methods GET,POST,PUT,DELETE,OPTIONS;
+	        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Token';
+	        add_header 'Access-Control-Allow-Credentials' 'true';
+	        return 204;
+        }
+
+       try_files $uri $uri/ /index.html;
     }
 }
